--- a/ProgMov/app/src/main/AndroidManifest.xml
+++ b/ProgMov/app/src/main/AndroidManifest.xml
@@ -12,11 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProgMov"
         tools:targetApi="31">
-        <activity
-            android:name=".FormCadastro"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".Perfil"></activity>
+        <activity android:name=".FormCadastro"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".FormLogin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
